// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useGetFiles() should return correct object given data fetching is successful and there are is a new folder being uploaded in the same dir path 1`] = `
Object {
  "data": Object {
    "existingFiles": Array [
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-11-01T21:09:05.237Z",
        "mimeType": "inode/directory",
        "name": ".rclone",
        "path": ".rclone",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T01:51:05.982Z",
        "mimeType": "inode/directory",
        "name": "Documents",
        "path": "Documents",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T05:14:59.237Z",
        "mimeType": "inode/directory",
        "name": "Games",
        "path": "Games",
        "remote": "gdrive",
        "size": -9,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-29T07:10:05.059Z",
        "mimeType": "inode/directory",
        "name": "Literature",
        "path": "Literature",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:39:11.850Z",
        "mimeType": "inode/directory",
        "name": "Pictures",
        "path": "Pictures",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:45:02.471Z",
        "mimeType": "inode/directory",
        "name": "Software",
        "path": "Software",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T04:22:24.997Z",
        "mimeType": "inode/directory",
        "name": "Videos",
        "path": "Videos",
        "remote": "gdrive",
        "size": -8,
      },
      Object {
        "dirPath": "",
        "isDirectory": false,
        "isImage": false,
        "lastUpdatedTime": "2021-11-14T18:58:44.655Z",
        "mimeType": "application/x-sh",
        "name": "backup.sh",
        "path": "backup.sh",
        "remote": "gdrive",
        "size": 1110,
      },
    ],
    "uploadingFiles": Array [
      Object {
        "isDirectory": true,
        "name": "Apps",
        "status": BehaviorSubject {
          "_value": "ONGOING",
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [],
          "thrownError": null,
        },
      },
    ],
  },
  "error": undefined,
  "refetchData": [MockFunction],
  "status": "success",
}
`;

exports[`useGetFiles() should return correct object given data fetching is successful and there are new files uploading under the same dir path 1`] = `
Object {
  "data": Object {
    "existingFiles": Array [
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-11-01T21:09:05.237Z",
        "mimeType": "inode/directory",
        "name": ".rclone",
        "path": ".rclone",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T01:51:05.982Z",
        "mimeType": "inode/directory",
        "name": "Documents",
        "path": "Documents",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T05:14:59.237Z",
        "mimeType": "inode/directory",
        "name": "Games",
        "path": "Games",
        "remote": "gdrive",
        "size": -9,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-29T07:10:05.059Z",
        "mimeType": "inode/directory",
        "name": "Literature",
        "path": "Literature",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:39:11.850Z",
        "mimeType": "inode/directory",
        "name": "Pictures",
        "path": "Pictures",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:45:02.471Z",
        "mimeType": "inode/directory",
        "name": "Software",
        "path": "Software",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T04:22:24.997Z",
        "mimeType": "inode/directory",
        "name": "Videos",
        "path": "Videos",
        "remote": "gdrive",
        "size": -8,
      },
      Object {
        "dirPath": "",
        "isDirectory": false,
        "isImage": false,
        "lastUpdatedTime": "2021-11-14T18:58:44.655Z",
        "mimeType": "application/x-sh",
        "name": "backup.sh",
        "path": "backup.sh",
        "remote": "gdrive",
        "size": 1110,
      },
    ],
    "uploadingFiles": Array [
      Object {
        "isDirectory": false,
        "name": "backup-locally.sh",
        "status": BehaviorSubject {
          "_value": "ONGOING",
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [
            SafeSubscriber {
              "_parentage": null,
              "_teardowns": Array [
                Subscription {
                  "_parentage": [Circular],
                  "_teardowns": null,
                  "closed": false,
                  "initialTeardown": [Function],
                },
              ],
              "closed": false,
              "destination": Object {
                "complete": [Function],
                "error": [Function],
                "next": [Function],
              },
              "initialTeardown": undefined,
              "isStopped": false,
            },
          ],
          "thrownError": null,
        },
      },
    ],
  },
  "error": undefined,
  "refetchData": [MockFunction],
  "status": "success",
}
`;

exports[`useGetFiles() should return correct object given data fetching is successful and there are no uploading files 1`] = `
Object {
  "data": Object {
    "existingFiles": Array [
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-11-01T21:09:05.237Z",
        "mimeType": "inode/directory",
        "name": ".rclone",
        "path": ".rclone",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T01:51:05.982Z",
        "mimeType": "inode/directory",
        "name": "Documents",
        "path": "Documents",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T05:14:59.237Z",
        "mimeType": "inode/directory",
        "name": "Games",
        "path": "Games",
        "remote": "gdrive",
        "size": -9,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-29T07:10:05.059Z",
        "mimeType": "inode/directory",
        "name": "Literature",
        "path": "Literature",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:39:11.850Z",
        "mimeType": "inode/directory",
        "name": "Pictures",
        "path": "Pictures",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:45:02.471Z",
        "mimeType": "inode/directory",
        "name": "Software",
        "path": "Software",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "dirPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T04:22:24.997Z",
        "mimeType": "inode/directory",
        "name": "Videos",
        "path": "Videos",
        "remote": "gdrive",
        "size": -8,
      },
      Object {
        "dirPath": "",
        "isDirectory": false,
        "isImage": false,
        "lastUpdatedTime": "2021-11-14T18:58:44.655Z",
        "mimeType": "application/x-sh",
        "name": "backup.sh",
        "path": "backup.sh",
        "remote": "gdrive",
        "size": 1110,
      },
    ],
    "uploadingFiles": Array [],
  },
  "error": undefined,
  "refetchData": [MockFunction],
  "status": "success",
}
`;
